fix: Adjust padding for location frame and location grid
Added padding to only the right side of the location frame and to the left side
of the location grid so that when a location is hovered over, the picture does
not go off screen.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -962,6 +962,7 @@ body, html {
         bottom: 0;
         height: 240px;
         width: 100%;
+        padding-left: 20px;
         white-space: nowrap;
         overflow-x: scroll;
         overflow-y: hidden;
@@ -978,7 +979,7 @@ body, html {
         background-size: cover;
         margin-top: 6px;
         text-align:center;
-        padding: 10px 10px;
+        padding: 10px 20px 10px 0px;
         cursor: pointer;
     }
 
